--- a/css/styles.css
+++ b/css/styles.css
@@ -163,6 +163,20 @@ h2 > a:hover {
     letter-spacing: 1px;
 }
 
+button {
+    margin: 6px 3px;
+    padding: 3px 10px;
+    color: var(--black);
+    border-radius: 4px;
+    border: 1px solid var(--blue);
+    text-align: center;
+    transition-duration: 0.4s;
+}
+
+button:hover {
+    color: var(--blue);
+}
+
 .learn-more  {
     font-family: var(--playfair-font);
     font-size: 12px;
