--- a/css/styles.css
+++ b/css/styles.css
@@ -102,7 +102,7 @@ section {
 }
 
 img {
-    width: 20%;
+    width: 150px;
     height: auto;
     /* background-color: var(--grey); */
     border: 3px solid var(--blue);
